# kbdex

./: .clang-format  .gitignore  CMakeLists.txt
SourceCode/: CMakeLists.txt  CSV.cpp  CSV.hpp  Daemon.cpp  Daemon.hpp  Decoder.cpp  Decoder.hpp  FIFOWatcher.cpp  FIFOWatcher.hpp  FSWatcher.cpp  FSWatcher.hpp  IUDevice.hpp  KBDAction.hpp  KBDB.cpp  KBDB.hpp  KBDConnection.hpp  KBDDaemon.cpp  KBDDaemon.hpp  KBDManager.cpp  KBDManager.hpp  KeyCombo.hpp  KeyValue.hpp  Keyboard.cpp  Keyboard.hpp  Language.hpp  LuaConfig.cpp  LuaConfig.hpp  LuaUtils.cpp  LuaUtils.hpp  MacroDaemon.cpp  MacroDaemon.hpp  Packet.hpp  Permissions.cpp  Permissions.hpp  Popen.cpp  Popen.hpp  RemoteUDevice.cpp  RemoteUDevice.hpp  SystemError.hpp  UDevice.cpp  (+11 more)
SourceCode/Api/: CMakeLists.txt
SourceCode/Core/: CMakeLists.txt  main.cpp
SourceCode/KeyboardAgent/: CMakeLists.txt  error_functions.c  error_functions.h  kbdex_generic_c_header.h  main.c
cmake/: kbdex_config.h.in
devlog/: roadmap.md
kbdex/: CMakeLists.txt
xneur-legacy/gxneur/src/: misc.h
xneur-legacy/kdeneur/src/: tabbar.h  xkb.c
xneur-legacy/xneur/lib/ai/: detection.h
